# airflow-docker-practice

./: .env.example  Dockerfile  compose.yaml  docker-compose.yaml  environment.yml  pyproject.toml
dags/: create_dag_with_python_operator.py  dag_with_catchup_and_backfill.py  dag_with_cron_expression.py  dag_with_minio_s3.py  dag_with_postgres_hooks.py  dag_with_postgres_operator.py  dag_with_python_dependencies.py  dag_with_taskflow_api.py  our_first_dag.py
data/: data.csv
src/airflow_docker_practice/: __init__.py
